@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.128 (gritter) 8/24/06
+.\" Sccsid @(#)doc.tr	1.129 (gritter) 8/24/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -1221,6 +1221,8 @@ Text Filling, Adjusting, and Centering
 .b1
 \T'rj'\fB&rj\fI|N\fR	off	\fIN\(eq\fR1	B,E	Right-align following \fIN\fR input text lines.\T
 .b1
+\T'brnl'\fB&brnl\fI|N\fR	off	\fIN\(eq\fR\(if	B,E	Break at end of next \fIN\fR input text lines.\T
+.b1
 \T'brpnl'\fB&brpnl\fI|N\fR	off	\fIN\(eq\fR\(if	B,E	Break and spread at end of next \fIN\fR input text lines.\T
 .b1
 \T'minss'\fB&minss\fI|N\fR	off	off	E,T	Minimum word space when adjusting lines.\T
@@ -1605,6 +1607,7 @@ Device and Font Description Files
 \T'br'br	4\T
 \T'break'break	16\T
 \T'breakchar'breakchar	13\T
+\T'brnl'brnl	4\T
 \T'brp'brp	4\T
 \T'brpnl'brpnl	4\T
 \T'c2'c2	10\T
@@ -1956,6 +1959,7 @@ using \fB\ex\fI\'N\'\fR.\T
 \T'n_.ascender'5.4\T	\T'n_.ascender'\fB&ascender\fR\T	\T'n_.ascender'Ascender of current font and point size.\T
 \T'n_.b'2.3\T	\T'n_.b'\fB&b\fR\T	\T'n_.b'Emboldening level.\T
 \T'n_.breakchar'13\T	\T'n_.breakchar'\fB&breakchar\fR\T	\T'n_.breakchar'Current optional line break characters.\T
+\T'n_.brnl'4.1\T	\T'n_.brnl'\fB&brnl\fR\T	\T'n_.brnl'Remaining number of lines with break at newline.\T
 \T'n_.brpnl'4.1\T	\T'n_.brpnl'\fB&brpnl\fR\T	\T'n_.brpnl'Remaining number of lines with break and spread at newline.\T
 \(en	\fB&c\fR	Number of \fIlines\fR read from current input file.
 \T'n_.cdp'11.2\T	\T'n_.cdp'\fB&cdp\fR\T	\T'n_.cdp'Visual depth below base line of previous character.\T
@@ -3044,18 +3048,24 @@ has the width of a single space.
 Trailing spaces are always discarded.
 Initial spaces are always retained and also cause a \fIbreak\fR.
 .pg
+With the \fBbrnl\fR request,
+a \fIbreak\fR occurs at the end of each text input line in fill mode,
+except for lines continued with \T'e_c'\fB\ec\fR\T.
+Contrasting to nofill mode,
+text is still adjusted to the line length.
+.pg
 When filling is in effect, a \A'e_p'\fB\ep\fR may be imbedded or attached to a word to
 cause a \fIbreak\fR at the \fIend\fR of the word and have the resulting output
 line \fIspread out\fR to fill the current line length.
 .pg
 With the \fBbrpnl\fR request,
-each newline at the end of a text input line in fill mode
+each end of a text input line in fill mode
 causes a \fIbreak\fR and a spread,
 except for lines continued with \T'e_c'\fB\ec\fR\T.
 The meaning of \fB\ep\fR is then changed
 such that a line that it is attached to is \fInot\fR spread;
-this is the only method to achieve a regular \fIbreak\fR then.
-Preformatted text can thus be set more comfortably
+this is the only method to achieve a regular \fIbreak\fR without a spread then.
+Manually adjusted text can thus be typed more comfortably
 since only the (fewer) lines that are not spread 
 need to be marked.
 .pg
@@ -3195,13 +3205,19 @@ within the current (line-length minus indent);
 otherwise like \fBce\fR.
 The number of lines to be centered, if any,
 is set to zero.
-The remaining number of lines to be centered
+The remaining number of lines to be right-justified
 is available in the \A'n_.rj'\fB&rj\fR register.
+.bta brnl
+\fB&brnl\fI|N\fR	off	\fIN\(eq\fR\(if	B,E	Break at end of next \fIN\fR input text lines
+when filling is in effect.
+The remaining number of lines so treated
+is available in the \A'n_.brnl'\fB&brnl\fR register.
 .bta brpnl
 \fB&brpnl\fI|N\fR	off	\fIN\(eq\fR\(if	B,E	Break and spread at end of next \fIN\fR input text lines
 when filling is in effect.
 The remaining number of lines so treated
 is available in the \A'n_.brpnl'\fB&brpnl\fR register.
+\fBbrpnl\fR disables \fBbrnl\fR and vice-versa.
 .bta minss
 \fB&minss\fI|N\fR	off	off	E,T	Minimum word space.
 When adjusting both margins,
@@ -3533,6 +3549,7 @@ The input is copied without interpretation
 \*+ Concealed newlines indicated by \T'e_newline'\fB\e\fR\T(newline) are eliminated.
 \*+ Comments indicated by \T'e_"'\fB\e"\fR\T or \T'e_#'\fB\e#\fR\T are eliminated.
 \*+ \T'e_t'\fB\et\fR\T and \T'e_a'\fB\ea\fR\T are interpreted as \s-1ASCII\s+1 horizontal tab and \s-1SOH\s+1 respectively \T's_tabs'(\(sc9).\T
+.ne 2
 \*+ \T'e_e'\fB\e\e\fR\T is interpreted as \fB\e\fR.
 \*+ \T'e_.'\fB\e.\fR\T is interpreted as "\fB.\fR".
 .x2
